Fixed Alignment

--- a/style.css
+++ b/style.css
@@ -61,7 +61,6 @@ body {
     display: flex;
     flex-direction: column;
     width: 100%;
-    margin-left: 3%;
 }
 
 .sub-game {
@@ -71,6 +70,10 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+#score {
+    margin-left: 3%;
 }
 
 #game-reset {
